dependency resolution data

--- a/pom.xml
+++ b/pom.xml
@@ -13,40 +13,35 @@
     <version>1.0-SNAPSHOT</version>
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.apache.flink/flink-streaming-java -->
-        <dependency>
-            <groupId>org.apache.flink</groupId>
-            <artifactId>flink-streaming-java_2.11</artifactId>
-            <version>1.6.2</version>
-            <scope>provided</scope>
-        </dependency>
+            <dependency>
+                <groupId>org.apache.flink</groupId>
+                <artifactId>flink-java</artifactId>
+                <version>1.6.2</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.flink</groupId>
+                <artifactId>flink-streaming-java_2.11</artifactId>
+                <version>1.6.2</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.flink</groupId>
+                <artifactId>flink-clients_2.11</artifactId>
+                <version>1.6.2</version>
+            </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.apache.flink/flink-core -->
-        <dependency>
-            <groupId>org.apache.flink</groupId>
-            <artifactId>flink-java</artifactId>
-            <version>1.6.2</version>
-        </dependency>
+            <dependency>
+                <groupId>org.apache.flink</groupId>
+                <artifactId>flink-connector-wikiedits_2.11</artifactId>
+                <version>1.6.2</version>
+            </dependency>
+            <!-- https://mvnrepository.com/artifact/org.apache.flink/flink-connector-twitter -->
+            <dependency>
+                <groupId>org.apache.flink</groupId>
+                <artifactId>flink-connector-twitter_2.11</artifactId>
+                <version>1.6.2</version>
+            </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.apache.flink/flink-connector-twitter -->
-        <dependency>
-            <groupId>org.apache.flink</groupId>
-            <artifactId>flink-connector-twitter_2.11</artifactId>
-            <version>1.6.2</version>
-        </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.apache.flink/flink-cep -->
-        <dependency>
-            <groupId>org.apache.flink</groupId>
-            <artifactId>flink-cep_2.11</artifactId>
-            <version>1.6.2</version>
-        </dependency>
-
-        <!-- https://mvnrepository.com/artifact/org.apache.flink/flink-streaming-scala -->
-        <dependency>
-            <groupId>org.apache.flink</groupId>
-            <artifactId>flink-streaming-scala_2.11</artifactId>
-            <version>1.6.2</version>
-        </dependency>
 
 
 
