--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,14 @@
                 <artifactId>commons-logging</artifactId>
                 <version>1.2</version>
             </dependency>
+            <!-- https://mvnrepository.com/artifact/black.ninia/jep -->
+            <dependency>
+                <groupId>black.ninia</groupId>
+                <artifactId>jep</artifactId>
+                <version>3.8.2</version>
+            </dependency>
+
+
 
 
 
