--- a/micro_service/Dockerfile
+++ b/micro_service/Dockerfile
@@ -1,3 +1,5 @@
 FROM tiangolo/uwsgi-nginx-flask:python3.7
 RUN pip install allennlp
 RUN git clone http://github.com/isaacmg/ml_serving_flask
+WORKDIR ml_serving_flask
+ENV PYTHONPATH=/ml_serving_flask
