--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,21 @@
                 <version>3.8.2</version>
             </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.asynchttpclient/async-http-client -->
+             <dependency>
+                <groupId>org.asynchttpclient</groupId>
+                <artifactId>async-http-client</artifactId>
+                <version>2.8.1</version>
+             </dependency>
+        <!-- https://mvnrepository.com/artifact/com.google/gson -->
+        <dependency>
+            <groupId>com.google</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.2.3</version>
+        </dependency>
+
+
+
 
 
 
