--- a/pom.xml
+++ b/pom.xml
@@ -16,25 +16,28 @@
             <dependency>
                 <groupId>org.apache.flink</groupId>
                 <artifactId>flink-java</artifactId>
-                <version>1.6.2</version>
+                <version>1.8.0</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.flink</groupId>
                 <artifactId>flink-streaming-java_2.11</artifactId>
-                <version>1.6.2</version>
+                <version>1.8.0</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.flink</groupId>
                 <artifactId>flink-clients_2.11</artifactId>
-                <version>1.6.2</version>
+                <version>1.8.0</version>
             </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.flink/flink-streaming-scala -->
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-streaming-scala_2.11</artifactId>
+            <version>1.8.0</version>
+        </dependency>
 
-            <dependency>
-                <groupId>org.apache.flink</groupId>
-                <artifactId>flink-connector-wikiedits_2.11</artifactId>
-                <version>1.6.2</version>
-            </dependency>
-            <!-- https://mvnrepository.com/artifact/org.apache.flink/flink-connector-twitter -->
+
+
+        <!-- https://mvnrepository.com/artifact/org.apache.flink/flink-connector-twitter -->
             <dependency>
                 <groupId>org.apache.flink</groupId>
                 <artifactId>flink-connector-twitter_2.11</artifactId>
@@ -59,12 +62,43 @@
                 <artifactId>async-http-client</artifactId>
                 <version>2.8.1</version>
              </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.flink/flink-table -->
+        <dependency>
+        <groupId>org.apache.flink</groupId>
+        <artifactId>flink-table</artifactId>
+        <version>1.8.0</version>
+        <type>pom</type>
+        <scope>provided</scope>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.flink/flink-table-api-java-bridge -->
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-table-api-java-bridge_2.12</artifactId>
+            <version>1.8.0</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-table-planner_2.11</artifactId>
+            <version>1.8.0</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpasyncclient -->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpasyncclient</artifactId>
+            <version>4.1.4</version>
+        </dependency>
+
+
+
+
         <!-- https://mvnrepository.com/artifact/com.google/gson -->
         <dependency>
             <groupId>com.google</groupId>
             <artifactId>gson</artifactId>
             <version>2.2.3</version>
         </dependency>
+
 
 
 
